# pipe-lang

./: .gitignore  Cargo.toml  IR_DESIGN.md  JIT-IMPLEMENTATION-PLAN.md  KNOWN_ISSUES.md  LEXER_PLAN.md  LICENSE  PHASES.md  PROJECT_PROGRESS_REPORT.md  README.md  TYPECHECKER_PLAN.md  abstract.md  api-contracts.md  cookies.txt  deliverables.md  dijith-phase2.md  dijith.md  general-guidelines.md  issues-JIT.md  known-issues.md  member1-phase2.md  member1.md  member2-phase2.md  member2.md  member3-phase2.md  member3.md  phase2-current.patch  pipe-lang.md  plan-implementation.md  plan-main.md  plan-member2.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  span.rs
crates/cli/: Cargo.toml
crates/cli/src/: fixtures.rs  lib.rs  main.rs  session.rs
crates/cli/tests/: cli_exits.rs  end_to_end.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: errors.rs  lib.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  lower.rs
crates/ir/tests/: lower_test.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: error.rs  lexer.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  parser.rs
crates/pipe-lang-lsp/: Cargo.toml
crates/pipe-lang-lsp/src/: lib.rs  main.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bridge.rs  error.rs  jit.rs  lib.rs  value.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: array.rs  closure.rs  io.rs  lib.rs  numeric.rs  ops.rs  option.rs  prelude.rs  result.rs  str.rs
crates/testsuite/: Cargo.toml
crates/testsuite/tests/: builtins.rs  cli.rs  diagnostics.rs  example_programs.rs  jit_instructions.rs  typechecker_errors.rs
crates/typechecker/: Cargo.toml
crates/typechecker/src/: env.rs  error.rs  exhaustiveness.rs  infer.rs  lib.rs  types.rs  unify.rs
crates/typechecker/tests/: integration_test.rs
docs/: getting-started.md  language-spec.md  stdlib-reference.md
example-programs/: _test_ascii1.pp  _test_ascii2.pp  _test_ascii3.pp  _test_ascii4.pp  _test_ascii6.pp  _test_ascii7.pp  _test_minimal.pp  _test_minimal10.pp  _test_minimal11.pp  _test_minimal12.pp  _test_minimal13.pp  _test_minimal2.pp  _test_minimal3.pp  _test_minimal4.pp  _test_minimal5.pp  _test_minimal7.pp  _test_minimal8.pp  _test_minimal9.pp  _test_repeat1.pp  _test_repeat2.pp  ascii-art.pp  capturing-closures.expected.txt  capturing-closures.pp  closures.expected.txt  closures.pp  csv-query.expected.txt  csv-query.pp  expression-evaluator.expected.txt  expression-evaluator.pp  factorial.pp  fibonacci.pp  game-of-life.pp  generics.pp  hello.pp  higher-order.pp  io-effects.pp  json-parser.expected.txt  json-parser.pp  map-strings.pp  markdown-renderer.expected.txt  (+10 more)
peter/diagnostics/: error.rs
tree-sitter-pipe-lang/: .gitignore  grammar.js  highlights.scm  locals.scm  package-lock.json  package.json  tree-sitter.json
tree-sitter-pipe-lang/bindings/rust/: Cargo.toml  build.rs  lib.rs
tree-sitter-pipe-lang/queries/: folds.scm  highlights.scm  indents.scm  injections.scm
tree-sitter-pipe-lang/script/: generate
tree-sitter-pipe-lang/src/: grammar.json  node-types.json  parser.c
tree-sitter-pipe-lang/test/corpus/: basic.txt
