[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pipe-lang"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Enables the end-to-end integration tests in tests/end_to_end.rs.
# These require the full pipeline to be implemented. Flipped on
# for Day 10 in PHASES.md.
phase-c = []

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
bumpalo = "3"
clap = { version = "4.6.1", features = ["derive"] }
diagnostics = { version = "0.1.0", path = "../diagnostics" }
ir = { version = "0.1.0", path = "../ir" }
miette = "7.6.0"
lexer = { version = "0.1.0", path = "../lexer" }
parser = { version = "0.1.0", path = "../parser" }
runtime = { version = "0.1.0", path = "../runtime" }
typechecker = { version = "0.1.0", path = "../typechecker" }
