[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pipe-lang"
path = "src/main.rs"

[lints]
workspace = true

[features]

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
bumpalo = "3"
clap = { version = "4.6.1", features = ["derive"] }
diagnostics = { version = "0.1.0", path = "../diagnostics" }
ir = { version = "0.1.0", path = "../ir" }
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
pipe-lang-lsp = { version = "0.1.0", path = "../pipe-lang-lsp" }
tower-lsp = "0.20.0"
lexer = { version = "0.1.0", path = "../lexer" }
parser = { version = "0.1.0", path = "../parser" }
runtime = { version = "0.1.0", path = "../runtime" }
stdlib = { version = "0.1.0", path = "../stdlib" }
typechecker = { version = "0.1.0", path = "../typechecker" }
