[package]
name = "pipe-lang-lsp"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
bumpalo = "3"
diagnostics = { version = "0.1.0", path = "../diagnostics" }
parser = { version = "0.1.0", path = "../parser" }
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp = "0.20.0"
typechecker = { version = "0.1.0", path = "../typechecker" }
