[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
cranelift-codegen = "0.133.0"
cranelift-frontend = "0.133.0"
cranelift-jit = "0.133.0"
cranelift-module = "0.133.0"
cranelift-native = "0.133.0"
ir = { version = "0.1.0", path = "../ir" }
libc = "0.2"
thiserror = "2.0.18"
tracing = "0.1"
typechecker = { version = "0.1.0", path = "../typechecker" }

[dev-dependencies]
bumpalo = "3"
parser = { version = "0.1.0", path = "../parser" }
