[package]
name = "testsuite"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dev-dependencies]
ast = { path = "../ast" }
bumpalo = "3"
cli = { path = "../cli" }
diagnostics = { path = "../diagnostics" }
ir = { path = "../ir" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
runtime = { path = "../runtime" }
stdlib = { path = "../stdlib" }
typechecker = { path = "../typechecker" }
smol_str = "0.3"
serde_json = "1"
