[package]
name = "typechecker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ast = { version = "0.1.0", path = "../ast" }
diagnostics = { version = "0.1.0", path = "../diagnostics" }
ena = "0.14.4"
thiserror = "2.0.18"

[dev-dependencies]
bumpalo = { version = "3.18.1", features = ["collections"] }
lexer = { version = "0.1.0", path = "../lexer" }
